--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,29 @@
--i https://pypi.org/simple
-alembic>=1.13.3; python_version >= '3.8'
+alembic==1.13.3
 aniso8601==9.0.1
-bcrypt==4.2.0; python_version >= '3.7'
-blinker==1.8.2; python_version >= '3.8'
-click==8.1.7; python_version >= '3.7'
-faker==28.4.1; python_version >= '3.8'
-flask==3.0.3; python_version >= '3.8'
+bcrypt==4.2.0
+blinker==1.8.2
+click==8.1.7
+faker==28.4.1
+flask==3.0.3
 flask-bcrypt==1.0.1
 flask-cors==5.0.0
-flask-migrate==4.0.7; python_version >= '3.6'
+flask-migrate==4.0.7
 flask-restful==0.3.10
-flask-sqlalchemy>=3.1.1; python_version >= '3.8'
-greenlet==3.1.1; platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
-gunicorn==23.0.0; python_version >= '3.7'
-itsdangerous==2.2.0; python_version >= '3.8'
-jinja2==3.1.4; python_version >= '3.7'
-mako==1.3.6; python_version >= '3.8'
-markupsafe==3.0.2; python_version >= '3.9'
-packaging==24.1; python_version >= '3.8'
-psycopg2-binary==2.9.9; python_version >= '3.7'
-python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
-python-dotenv==1.0.1; python_version >= '3.8'
+flask-sqlalchemy==3.1.1
+greenlet==3.1.1
+gunicorn==23.0.0
+itsdangerous==2.2.0
+jinja2==3.1.4
+mako==1.3.6
+markupsafe==3.0.2
+packaging==24.1
+psycopg2-binary==2.9.9
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
-setuptools==70.3.0; python_version >= '3.8'
-six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
-sqlalchemy>=2.0.29,<2.1; python_version >= '3.7'
-sqlalchemy-serializer>=1.4.22; python_version >= '3.10' and python_version < '4.0'
-typing-extensions==4.12.2; python_version >= '3.8'
-werkzeug==3.0.4; python_version >= '3.8'
+setuptools==70.3.0
+six==1.16.0
+sqlalchemy==2.0.29
+sqlalchemy-serializer==1.4.22
+typing-extensions==4.12.2
+werkzeug==3.0.4
