Fix SQLAlchemy version conflict and set Python 3.12

--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ python-dotenv==1.0.1
 pytz==2024.2
 setuptools==70.3.0
 six==1.16.0
-sqlalchemy>=2.0.31
+sqlalchemy==2.0.29
 sqlalchemy-serializer==1.4.22
 typing-extensions==4.12.2
 werkzeug==3.0.4
