--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
